--- a/currency_exchange_rate_amount_/static/description/index.html
+++ b/currency_exchange_rate_amount_/static/description/index.html
@@ -9,7 +9,7 @@
         style="font-family: 'Montserrat', sans-serif !important; font-weight: 300 !important; color: #FFFFFF !important;  font-size: 1.4rem !important; text-align: center !important;">
         A Module For Currency Exchange in Sales and Invoices!
       </p>
-      <img src="/assets/screenshots/exchangegif" class="img-responsive" width="100%" height="auto" />
+      <img src="/assets/screenshots/exchange.gif" class="img-responsive" width="100%" height="auto" />
     </div>
   </div>
 
